--- a/README
+++ b/README
@@ -1,3 +1,5 @@
 I made all the sections that were written for earlier work in red, so we knowwhats old.
 
 we need to look at those and take out whats not true/relevant anymore
+
+test push by jim
